extended equityleg description

--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -1,12 +1,14 @@
 \subsubsection{Equity Leg Data}
 \label{ss:equitylegdata}
 
-Listing \ref{lst:equitylegdata} shows an example of a leg of type Equity. The EquityLegData block contains the following
-elements:
+Listing \ref{lst:equitylegdata} shows an example of a leg of type Equity. Note that a resetting Equity Leg (NotionalReset set to  \emph{true}) must have either: \\
+a) a Quantity, or \\
+b) an InitialPrice and a Notional in the leg
+
+The EquityLegData block contains the following elements:
 
 \begin{itemize}
-\item Quantity: The number of shares. Optional. Either a notional or the quantity must be given for the leg, but not
-  both at the same time.
+\item Quantity[Optional]: The number of shares. Either a notional or the quantity must be given for the leg, but not both at the same time.
 
   Allowable values: Any positive real number
 
@@ -26,21 +28,25 @@ Allowable values: Any positive real number
 
 \item NotionalReset [Optional]: Defaults to \emph{true}.  Notional resets only affect the equity leg. If NotionalReset
   is set to \emph{true} the quantity or number of shares of the underlying equity is fixed for all the coupons on the
-  equity leg and the notional for a period is computed as
+  equity leg and the Notional for a period is computed as
 
-  notional = quantity x share price at valuation date for period x FX conversion rate at valuation date for period
+  Notional = Quantity x (share price at valuation date for period) x (FX conversion rate at valuation date for period)
 
   Notice that either a) the Quantity or b) a Notional and an explicit InitialPrice must be given in the leg data for a
   resettable leg. In the latter case the Quantity is computed as
 
-  Quantity = Notional / IntitalPrice
+  Quantity = Notional / InitialPrice
 
   No FX conversion is allowed if the Quantity has to be derived from the Notional and the InitialPrice.
 
-  If NotionalReset is set to \emph{false} the quantity of the underlying equity varies per period, and instead the
-  notional is taken to be the notional specified in the leg or - if the quantity is given - to be
+  If NotionalReset is set to \emph{false} the quantity of the underlying equity varies per period, as per:
+  
+  Quantity = Notional / (Equity Price at valuation date for the period)
 
-  Quantity x InitialPrice
+For the first period, the InitialPrice is the Equity Price at valuation date.
+Here, the Notional is taken to be the Notional specified in the leg or - if the Quantity is given - to be
+
+  Notional = Quantity x InitialPrice
 
   where again the InitialPrice must be explicitly given in the leg data and no FX conversion is allowed in this case.
 
