changed from ISIN: to RED: in listing for CDS

--- a/Docs/UserGuide/tradedata/creditdefaultswap.tex
+++ b/Docs/UserGuide/tradedata/creditdefaultswap.tex
@@ -33,7 +33,7 @@ The \lstinline!LegData! block then defines the CDS premium leg structure. This p
 \begin{minted}[fontsize=\footnotesize]{xml}
     <CreditDefaultSwapData>
       <IssuerId>CPTY_A</IssuerId>
-      <CreditCurveId>ISIN:XS0982710740</CreditCurveId>
+      <CreditCurveId>RED:008CA0|SNRFOR|USD|MR14</CreditCurveId>
       <SettlesAccrual>Y</SettlesAccrual>
       <ProtectionPaymentTime>atDefault</ProtectionPaymentTime>
       <ProtectionStart>20160206</ProtectionStart>
