--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4986,6 +4986,7 @@ This node is used only if \lstinline!DontThrow! is \lstinline!true!. The meaning
 \input{../../Docs/UserGuide/tradecomponents/fixedlegdatarates}
 \input{../../Docs/UserGuide/tradecomponents/floatinglegdata}
 \input{../../Docs/UserGuide/tradecomponents/legdataamortisation}
+\input{../../Docs/UserGuide/tradecomponents/indexings}
 \input{../../Docs/UserGuide/tradecomponents/cmsleg}
 \input{../../Docs/UserGuide/tradecomponents/cmsspreadleg}
 \input{../../Docs/UserGuide/tradecomponents/digitalcmsspreadleg}
