specified that Rule cant be left blank

--- a/Docs/UserGuide/tradecomponents/scheduledata.tex
+++ b/Docs/UserGuide/tradecomponents/scheduledata.tex
@@ -98,7 +98,7 @@ Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_
 \item Rule [Optional]: Rule for the generation of the schedule using given
   start and end dates, tenor, calendar and business day conventions. 
 
-Allowable values and descriptions: See Table \ref{tab:rule} Rule. Defaults to \emph{Forward} if left blank or omitted.
+Allowable values and descriptions: See Table \ref{tab:rule} Rule. Defaults to \emph{Forward} if omitted. Cannot be left blank.
 
 \item EndOfMonth [Optional]: Specifies whether the date generation rule is different for end of month, so that the last date of each month is generated, regardless of number of days in the month.
 
