[Touch:1123]Update docs for American commodity options.

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -82,8 +82,8 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
 \item Style: The exercise style of the option. 
 
   Allowable values: \emph{European} or \emph{American} or \emph{Bermudan}. Note that trade types IR Swaption and CallableSwap can have style
-  \emph{European} or \emph{Bermudan}, but not \emph{American}.  FX and Equity options trade can have styles \emph{European}
-  or \emph{American}, but not \emph{Bermudan}. Commodity Option, Commodity Swaption and Commodity Average Price Option must have style  \emph{European}. 
+  \emph{European} or \emph{Bermudan}, but not \emph{American}.  FX, Equity and commodity options can have styles \emph{European}
+  or \emph{American}, but not \emph{Bermudan}. Commodity Swaption and Commodity Average Price Option must have style \emph{European}. 
 
 \item NoticePeriod [Optional]: The notice period defining the date (relative to the exercise date) on which the exercise
   decision has to be taken. If not given the notice period defaults to 0D, i.e. the notice date is identical to the
