--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -28,7 +28,7 @@ The meanings and allowable values of the elements in the \lstinline!CommodityOpt
 
 \begin{itemize}
 
-\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note that the commodity option type allows for \emph{European} option style only.
+\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note that the commodity option type allows for \emph{European} or \emph{American} option style. If the option style is \emph{American}, \emph{PayOffAtExpiry} needs to be \emph{false} as payoff at expiry is not currently supported.
 \item Name: The name of the underlying commodity. \\
 Allowable values:  See \lstinline!Name! for commodity trades in Table \ref{tab:commodity_data}.
 \item Currency: The currency of the commodity option. \\
