default to 0 rate cutoff days for both avg and comp on coupons

--- a/Docs/UserGuide/tradecomponents/floatinglegdata.tex
+++ b/Docs/UserGuide/tradecomponents/floatinglegdata.tex
@@ -174,8 +174,7 @@ Allowable values:  \emph{true, false}. Defaults to \emph{false} if left blank or
   Allowable values: any valid period, e.g. 2D, 3M, 1Y
 
 \item RateCutoff [Optional]: Only applicable to OIS legs. The number of fixing dates at the end of the fixing period for
-  which the fixing value is held constant and set to the previous value. Defaults to $0$ for compounded and $2$ for
-  averaged OIS legs.
+  which the fixing value is held constant and set to the previous value. Defaults to $0$.
 
 Allowable values: any non-negative whole number
 
